# meos

./: .gitignore  AGENTS.md  CMakeLists.txt  README.md  vcpkg.json
.claude/skills/: iof-xml-migration.md  path-normalization.md  pdf-generation.md  sqlite-migration.md  time-migration.md  xml-csv-migration.md
.claude/skills/build-fix/: SKILL.md
.claude/skills/curate-skills/: SKILL.md
.claude/skills/include-normalization/: SKILL.md  fix_includes.py
.claude/skills/migrate-entity/: SKILL.md
.claude/skills/migration/: SKILL.md
.claude/skills/normalize_paths/: SKILL.md  normalize_paths.py
.claude/skills/prd/: SKILL.md
.claude/skills/replace_file_apis/: SKILL.md  replace_file_apis.py
.claude/skills/replace_msgbox_debug/: SKILL.md  replace_msgbox_debug.py
.claude/skills/replace_time_apis/: SKILL.md  replace_time_apis.py
.claude/skills/replace_win32_strings/: replace_win32_strings.py
.claude/skills/replace_win32_types/: SKILL.md  (+1 more)
.github/instructions/: skills.instructions.md
.github/workflows/: build-legacy.yml  build-wine.yml  cpp.yml  frontend.yml
code/: AGENTS.md  CMakeLists.txt  HTMLWriter.cpp  MeOS.vcxproj  MeOSFeatures.cpp  MeosSQL.cpp  MeosSQL.h  RestService.cpp  RunnerDB.cpp  RunnerDB.h  SportIdent.cpp  SportIdent.h  StdAfx.cpp  StdAfx.h  TabAuto.cpp  TabAuto.h  TabBase.cpp  TabBase.h  TabClass.cpp  TabClass.h  TabClub.cpp  TabClub.h  TabCompetition.cpp  TabCompetition.h  TabControl.cpp  TabControl.h  TabCourse.cpp  TabCourse.h  TabList.cpp  TabList.h  TabMulti.h  TabRunner.cpp  TabRunner.h  TabSI.cpp  TabSI.h  TabSpeaker.cpp  TabSpeaker.h  TabTeam.cpp  TabTeam.h  Table.cpp  (+126 more)
code/Lists/: apientry.listdef  classcourse.lxml  classes_together.listdef  clubnamemap.csv  clubstartlist_team.listdef  coursestart.listdef  cup1.meos  cup2.meos  cup3.meos  database.wpersons  entryform.template  first_to_finish.listdef  formattable.template  ind_courseresult.lxml  ind_result.listdef  knockouttotal.listdef  lap_count.listdef  lap_extra_control.listdef  latest.listdef  legresult.listdef  liveresults.listdef  missingresult.listdef  modifiedcard.listdef  narrow_resultlist.listdef  no_course_competition.meos  patrol_rogaining.listdef  patrolresult.listdef  patrolstart.listdef  punchorder.listdef  relay.listdef  rogaining.brules  rogainingstat.listdef  split_empty.listdef  split_individual_narrow.listdef  split_individual_result.listdef  split_rogaining.listdef  split_team_result.listdef  split_team_rogaining.listdef  sportident.cardsystem  startlist.listdef  (+6 more)
code/mysql/mysql/: thread_pool_priv.h
plan/: legacy-prep-candidates.md  prd-core-migration.md  prd-legacy-build.md  prd-legacy-preparation.md  prd-web-frontend.md  prd.json  prompt.md  ralph.sh
plan/archive/: prd-legacy-preparation-2.md  prd-legacy-preparation.md
resources/lang/: bulgarian.lng  danish.lng  english.lng  french.lng  swedish.lng
src/app/: CMakeLists.txt  app.cpp  app.h  main.cpp
src/db/: CMakeLists.txt  CardRepository.cpp  CardRepository.h  ClassRepository.cpp  ClassRepository.h  ClubRepository.cpp  ClubRepository.h  ControlRepository.cpp  ControlRepository.h  CourseRepository.cpp  CourseRepository.h  DbMigration.cpp  DbMigration.h  EventRepository.cpp  EventRepository.h  FreePunchRepository.cpp  FreePunchRepository.h  RunnerRepository.cpp  RunnerRepository.h  SQLiteDatabase.cpp  SQLiteDatabase.h  TeamRepository.cpp  TeamRepository.h  database.cpp  database.h  db.cpp  seed.cpp  seed.h
src/domain/: CMakeLists.txt  SICard.h  TableType.h  classconfiginfo.cpp  classconfiginfo.h  datadefiners.h  domain.cpp  domain_header.h  domain_stubs.cpp  entities.h  generalresult.cpp  generalresult.h  inthashmap.h  intkeymap.hpp  intkeymapimpl.hpp  meos_dom_stubs.h  metalist.cpp  metalist.h  oAbstractRunner.h  oBase.cpp  oBase.h  oCard.cpp  oCard.h  oClass.cpp  oClass.h  oClub.cpp  oClub.h  oControl.cpp  oControl.h  oCourse.cpp  oCourse.h  oDataContainer.cpp  oDataContainer.h  oEvent.cpp  oEvent.h  oEventDraw.cpp  oEventResult.cpp  oFreePunch.cpp  oFreePunch.h  oListInfo.h  (+12 more)
src/io/: AGENTS.md  CMakeLists.txt  CsvIo.cpp  CsvIo.h  HtmlWriter.cpp  HtmlWriter.h  IofXml.cpp  IofXml.h  PdfWriter.cpp  PdfWriter.h  csv_export.cpp  csv_export.h  csv_import.cpp  csv_import.h  html_template.cpp  html_template.h  io.cpp  io.h  iof_xml.cpp  iof_xml.h  pdf_writer.cpp  pdf_writer.h
src/net/: ApiError.h  ApiRouter.h  CMakeLists.txt  CardsApi.cpp  CardsApi.h  ClassesApi.cpp  ClassesApi.h  ClubsApi.cpp  ClubsApi.h  CompetitionApi.cpp  CompetitionApi.h  ControlsApi.cpp  ControlsApi.h  CoursesApi.cpp  CoursesApi.h  HttpServer.h  JsonUtils.h  ResultsApi.cpp  ResultsApi.h  RunnersApi.cpp  RunnersApi.h  TeamsApi.cpp  TeamsApi.h  api.cpp  api.h  api_utils.h  http_server.cpp  http_server.h  net.cpp  net.h
src/util/: CMakeLists.txt  SICard.h  Table.h  TimeStamp.cpp  TimeStamp.h  common_enums.h  csvparser.cpp  csvparser.h  file_util.cpp  file_util.h  gdioutput.h  hls.cpp  hls.h  localizer.cpp  localizer.h  meos_util.cpp  meos_util.h  meos_version.cpp  meos_version.h  meosexception.h  string_util.cpp  string_util.h  time_util.cpp  time_util.h  timeconstants.hpp  util.cpp  xmlparser.cpp  xmlparser.h
tests/: CMakeLists.txt  api_framework_test.cpp  api_test.cpp  card_test.cpp  cards_api_test.cpp  class_test.cpp  classes_api_test.cpp  club_test.cpp  clubs_api_test.cpp  clubs_controls_api_test.cpp  competitions_api_test.cpp  control_test.cpp  controls_api_test.cpp  course_test.cpp  courses_api_test.cpp  courses_classes_api_test.cpp  csv_io_test.cpp  csvparser_test.cpp  db_complex_entities_test.cpp  db_events_teams_test.cpp  db_migration_test.cpp  db_simple_entities_test.cpp  db_test.cpp  domain_classconfiginfo_qf_test.cpp  domain_generalresult_test.cpp  domain_obase_test.cpp  domain_ocard_test.cpp  domain_oclass_test.cpp  domain_oclub_test.cpp  domain_ocontrol_test.cpp  domain_ocourse_test.cpp  domain_oevent_integration_test.cpp  domain_oevent_test.cpp  domain_ofreepunch_test.cpp  domain_opunch_test.cpp  domain_orunner_result_test.cpp  domain_orunner_test.cpp  domain_oteam_relay_test.cpp  domain_oteam_test.cpp  domain_result_tests.cpp  (+36 more)
(+62 files in other folders)
